--- a/README
+++ b/README
@@ -2,12 +2,12 @@ CPAN-Testers-Common-Client
 
 These are generic instructions to install the module. Please refer to:
 
-   http://beta.metacpan.org/module/MODULE
+   http://metacpan.org/module/CPAN::Testers::Common::Client
 
 for the full documentation. That same documentation will also be
 available to you after installation at the command line. Just type:
 
-   perldoc MODULE
+   perldoc CPAN::Testers::Common::Client
 
 after the the module is installed.
 
@@ -24,7 +24,7 @@ To install this module, run the following commands:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2012, Breno G. de Oliveira
+Copyright (C) 2012-2013, Breno G. de Oliveira
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
