--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for CPAN-Testers-Common-Client
 
+0.08  2015-04-18
+      - history support (to prevent sending duplicate reports)
+
 0.07  2013-05-15
       - fixed metabase_id generation prompting
         (thanks SYP for reporting!)
